data/derived/sp14/progs/unify/prog1971.ml.out
Characters 88-89:
  let rec digHelper n = if n < 10 then n else digHelper (sumList n)
                                                                 ^
Error: This expression has type int but an expression was expected of type
         int list
